# file-server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Client/: CMakeLists.txt
Client/Source/: Main.cpp
Server/: CMakeLists.txt
Server/Source/: Main.cpp  Server.cpp  Server.hpp  Session.hpp
Server/Source/Connection/: Common.hpp  RequestBuilder.cpp  RequestBuilder.hpp  RequestParser.cpp  RequestParser.hpp  ResponseBuilder.cpp  ResponseBuilder.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp
Server/Source/Core/: Router.cpp  Router.hpp  Server.cpp  Server.hpp
Server/Source/FileSystem/: FileHandle.cpp  FileHandle.hpp
Server/Source/HTTP/: Common.hpp  Parser.cpp  Parser.hpp  RequestBuilder.hpp  RequestParser.cpp  ResponseBuilder.cpp  ResponseBuilder.hpp  Session.cpp  Session.hpp
Server/Source/HTTP/Request/: Builder.cpp  Builder.hpp  Parser.cpp  Parser.hpp
Server/Source/Server/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
Server/Source/Utility/: Logging.hpp
Server/Source/Work/: ThreadPool.cpp  ThreadPool.hpp
