cmake_minimum_required(VERSION 3.24)
project(FileServer LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(SERVER_EXECUTABLE_NAME Server)
set(CLIENT_EXECUTABLE_NAME Client)

add_subdirectory(Server)
add_subdirectory(Client)

include(FetchContent)

find_package(asio REQUIRED)
add_library(asioInterface INTERFACE)
target_include_directories(asioInterface INTERFACE 
  "${asio_SOURCE_DIR}/asio/include"
)
target_compile_definitions(asioInterface INTERFACE 
  ASIO_STANDALONE
  _WIN32_WINNT=0x0601
)

find_package(nlohmann_json REQUIRED)
add_library(jsonInterface INTERFACE)
target_link_libraries(jsonInterface INTERFACE 
  nlohmann_json::nlohmann_json
)

find_package(OpenSSL REQUIRED)
add_library(OpenSSLInterface INTERFACE)

target_link_libraries(OpenSSLInterface INTERFACE
  OpenSSL::SSL
  OpenSSL::Crypto
)

find_package(llhttp REQUIRED)
add_library(llhttpInterface INTERFACE)
target_link_libraries(llhttpInterface INTERFACE
  llhttp::llhttp_static
)

find_package(spdlog REQUIRED)
add_library(spdlogInterface INTERFACE)
target_link_libraries(spdlogInterface INTERFACE 
  spdlog::spdlog
)

set_target_properties(Server PROPERTIES 
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Output/Server"
)
set_target_properties(Client PROPERTIES 
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Output/Client"
)

